package creature;

public class Evial extends Creature{
//    @Override
//    public char getSymbol(){
//        return 'E';
//    }
    @Override
    public String toString(){
        return "Evial:"+ super.toString();
    }
}