package creature;

public interface Moveable {
    //    void moveTo(new Position (int x,int y));
    void moveTo(int x,int y);
}
