package creature;

public interface Swapable<T> {
    void swapPosition(T t);
}
