package factory;

abstract public class Factory<T> {
    abstract public T generate();
}
